thats it por 50%

--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -384,7 +384,9 @@ text-align: start;
     z-index: 2;
 }
  
-
+.category_nav_new{
+    height: fit-content;
+}
 .monokai_mode #gcashNum,
 .monokai_mode #pmethod,
 .dark_mode #gcashNum,
