--- a/resources/products.css
+++ b/resources/products.css
@@ -1152,45 +1152,64 @@
     outline: solid 1px rgba(92, 92, 92, 0.438);
 
 }
-.exit{
+
+.exit {
     height: 2.3rem;
     width: 2.3rem;
     border-radius: 0 5rem 5rem 0;
     display: grid;
     place-items: center;
-    background-color: #8f8f8f;
+    background-color: #535353a3;
     position: absolute;
+    border: solid 1px #ffffff66;
     right: -2rem;
 }
-.exit:hover{
+
+.exit:hover {
     background-color: #e611119a;
     transition: .3s;
 }
-.exit i{
+
+.exit i {
     transform: rotate(45deg);
     font-size: 1rem;
 }
-.exit:hover i{
+
+.exit:hover i {
     transform: rotate(135deg);
 }
 
-.comboAdd-form-cont>*{
+.comboAdd-form-cont>* {
     margin-left: 4rem;
 }
-.comboAdd-form-cont{
+
+.comboAdd-form-cont {
     z-index: 5;
-    display: none;
+    /* display: none;6 */
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
+
 .image-wrap {
     height: 10rem;
     width: 10rem;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
+}
+
+
+.loadingScComboForm ol>*:nth-child(1) {
+    background-color: #2c2c2cc5;
+}
+
+.loadingScComboForm ol>*:nth-child(2) {
+    height: 1.5rem;
+    background-color: #2c2c2c81;
+    width: 90%;
+    border-radius: 2rem;
 }
 
 .img-wrap-out {
@@ -1234,12 +1253,21 @@
     display: grid;
     place-items: center;
 }
-.comboAdd-form-inner{
+
+.comboAdd-form-inner {
     position: relative;
     height: fit-content;
     width: fit-content;
-
+    animation-name: comboForm;
+    animation-iteration-count: 1;
+    animation-duration: .4s;
 }
+@keyframes comboForm {
+    0%{
+        transform: translateX(1rem) rotate(3deg);
+    }
+}
+
 #addComboForm {
     position: relative;
     z-index: 1;
@@ -1247,7 +1275,7 @@
     display: grid;
     grid-template-columns: 14rem auto;
     height: 14rem;
-    background: linear-gradient(-260deg, #1E1F1C,#1E1F1C, #747474, #747474);
+    background: linear-gradient(-260deg, #1E1F1C, #1E1F1C, #747474, #747474);
     width: 44rem;
     border-radius: 8rem .4rem .4rem 8rem;
 }
@@ -1324,12 +1352,15 @@
 
 .outer-response>*:nth-child(1) {
     transform: translateY(-7rem);
-    min-height: 25rem;
+    min-height: 20rem;
     background-color: #181818;
+    outline: solid 1px #ffffff26;
 }
-.action-products-outer{
+
+.action-products-outer {
     display: none;
 }
+
 .action-products {
     color: rgb(199 199 199);
     display: grid;
@@ -1337,15 +1368,18 @@
     padding: 9rem 0 3rem;
     height: fit-content;
 }
+
 .action-products li,
-.action-products ol{
+.action-products ol {
     list-style: none;
 }
-.action-products h3{
+
+.action-products h3 {
     position: relative;
     margin-bottom: 1.4rem;
     text-align: center;
 }
+
 .action-products h3::after {
     position: absolute;
     content: '';
@@ -1354,65 +1388,128 @@
     background-color: rgb(212, 88, 5);
     top: 120%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.find-prod li{
+
+.find-prod {
+    display: grid;
+    place-items: center;
+}
+
+.find-prod li {
     position: relative;
     height: fit-content;
     margin-bottom: 1.5rem;
 
 }
-.find-prod i{
+
+.find-prod i {
     position: absolute;
     top: 50%;
     left: 1.3rem;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
-#findProdInput{
+#findProdInput {
     background-color: #1e1f1c96;
     border: none;
     outline: solid 1px rgba(192, 192, 192, 0.308);
     border-radius: .9rem;
     height: 2.5rem;
     width: 17rem;
-    padding: 0 1.3rem 0 2.2rem ;
+    padding: 0 1.3rem 0 2.2rem;
     color: rgb(199 199 199);
 }
-
-
-.data-products{
-    height: 18rem;
+ 
+.data-products-selected,
+.loadingScComboForm,
+.data-products {
+    height: fit-content;
+    max-height: 18rem;
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    scrollbar-width:none ;
+    scrollbar-width: none;
     overflow-y: scroll;
     padding: .7rem .3rem;
-    
-
+    width: 17.8rem;
+    min-height: 10rem;
+    text-align: center;
 }
 
-.data-products ol{
+.loadingScComboForm {
+    padding: 0;
+    position: absolute;
+    z-index: 1;
+    background-color: #181818;
+}
+.data-products-selected ol,
+.data-products ol {
     background: linear-gradient(-260deg, #1E1F1C, #747474, #747474);
     display: grid;
     padding: .5rem .8rem;
     border-radius: .5rem;
     outline: solid 1px rgba(255, 255, 255, 0.274);
-
     grid-template-columns: 2rem 11rem auto;
     gap: .6rem;
 }
-.data-products ol:hover{
+
+.data-products>* {
+    display: none !important;
+
+}
+
+.data-products>*:nth-child(1) {
+    display: block !important;
+}
+
+.newLoadingScComboForm {
+    display: none !important;
+}
+
+.new-data-products {
+    display: grid !important;
+
+}
+
+.loadingScComboForm ol {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #747474;
+    width: 17.2rem;
+}
+
+.loadingScComboForm ol li {
+    animation-name: loadCombo;
+    animation-iteration-count: infinite;
+    animation-duration: 1.5s;
+}
+
+.loadingScComboForm ol>*:nth-child(1) {
+    animation-delay: .3s;
+}
+
+@keyframes loadCombo {
+    50% {
+        opacity: 0;
+    }
+}
+.data-products-selected ol:hover,
+.data-products ol:hover {
     transition: .3s;
     background: linear-gradient(-260deg, #1e1f1c9a, #7474748a, #7474748a);
 
 }
+
+.data-products-selected ol li,
 .data-products ol li {
     display: flex;
     align-items: center;
 }
-.data-products ol li .action-combo{
+
+.data-products-selected ol li .action-combo ,
+.data-products ol li .action-combo {
     height: 1.5rem;
     width: 1.5rem;
     display: grid;
@@ -1420,19 +1517,27 @@
     border-radius: 50%;
     background-color: rgba(58, 58, 58, 0.979);
     outline: solid 1px rgba(192, 192, 192, 0.452);
-    
+
 }
-.data-products ol li .action-combo:hover{
+
+.data-products-selected ol li .action-combo:hover,
+.data-products ol li .action-combo:hover {
     background-color: rgba(83, 83, 83, 0.541);
 
 }
-.data-products ol li .action-combo:hover i{
+
+.data-products-selected ol li .action-combo:hover i,
+.data-products ol li .action-combo:hover i {
     transform: rotate(180deg);
     transition: .3s;
 }
-.data-products li:nth-child(2){
+
+.data-products-selected li:nth-child(2),
+.data-products li:nth-child(2) {
     font-size: .9rem;
 }
+
+.data-products-selected li:nth-child(1),
 .data-products li:nth-child(1) {
     height: 2rem;
     width: 2rem;
@@ -1442,6 +1547,12 @@
     overflow: hidden;
 }
 
+.loadingScComboForm ol>*:nth-child(1) {
+    outline: solid 1px rgb(192 192 192 / 12%);
+
+}
+
+.data-products-selected li img,
 .data-products li img {
     border-radius: 50%;
     height: 2.3rem;
