--- a/resources/products.css
+++ b/resources/products.css
@@ -1153,16 +1153,21 @@
 
 }
 
-.exit {
+.monokai_mode .exit,
+.dark_mode .exit {
+    background-color: #535353a3;
+
+}.exit {
     height: 2.3rem;
     width: 2.3rem;
     border-radius: 0 5rem 5rem 0;
     display: grid;
     place-items: center;
-    background-color: #535353a3;
+    background-color: #000000a3;
     position: absolute;
     border: solid 1px #ffffff66;
     right: -2rem;
+    color: white;
 }
 
 .exit:hover {
@@ -1187,12 +1192,13 @@
     z-index: 5;
     /* display: none;6 */
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .image-wrap {
+    outline: solid 1px;
     height: 10rem;
     width: 10rem;
     border-radius: 50%;
@@ -1202,12 +1208,26 @@
 
 
 .loadingScComboForm ol>*:nth-child(1) {
+
     background-color: #2c2c2cc5;
 }
+.loadingScComboForm ol>*:nth-child(1) {
+    background-color: #5151513d;
+}
 
+/* 3232 */
+
+.monokai_mode .loadingScComboForm ol>*:nth-child(2) {
+
+    background-color: #47493e;
+}
+.dark_mode .loadingScComboForm ol>*:nth-child(2) {
+    background-color: #2c2c2c81;
+    
+}
 .loadingScComboForm ol>*:nth-child(2) {
     height: 1.5rem;
-    background-color: #2c2c2c81;
+    background-color: #2c2c2c2b;
     width: 90%;
     border-radius: 2rem;
 }
@@ -1268,14 +1288,29 @@
     }
 }
 
+
+/* 3232 */
+
+.monokai_mode #addComboForm{
+    background: linear-gradient(-260deg, rgb(54, 54, 54), rgb(54, 54, 54), #47493E, #47493E);
+    color: rgb(238, 238, 238);
+    outline: solid 1px #3b3b3b;
+}
+.dark_mode #addComboForm{
+    background: linear-gradient(-260deg, #1E1F1C, #1E1F1C, #747474, #747474);
+    color: rgb(238, 238, 238);
+    outline: solid 1px #3b3b3b;
+}
 #addComboForm {
     position: relative;
     z-index: 1;
     color: rgb(199 199 199);
+    color: rgb(55 54 54);
     display: grid;
     grid-template-columns: 14rem auto;
     height: 14rem;
-    background: linear-gradient(-260deg, #1E1F1C, #1E1F1C, #747474, #747474);
+    background: linear-gradient(90deg, rgb(255, 174, 120), rgb(255, 255, 255), rgb(255, 255, 255));
+outline: solid 1px #979797;
     width: 44rem;
     border-radius: 8rem .4rem .4rem 8rem;
 }
@@ -1313,23 +1348,36 @@
     gap: .3rem;
 }
 
+/* 3232 */
+
+.monokai_mode #addComboForm>*:nth-child(2) input,
+.dark_mode #addComboForm>*:nth-child(2) input{
+    background: #1e1f1c96;
+    outline: solid 1px rgba(255, 255, 255, 0.151);
+    color: rgb(238, 238, 238);
+}
 #addComboForm>*:nth-child(2) input {
-    background-color: #1e1f1c96;
-    color: rgb(199 199 199);
+    background: rgba(214, 214, 214, 0.466);
     border: none;
+    color: #000000;
     border-radius: .4rem;
     height: 2.5rem;
     padding: 0 .8rem;
     font-size: 1rem;
-    outline: solid 1px rgba(255, 255, 255, 0.151);
+    outline:solid 1px rgb(0 0 0 / 30%);
 }
 
 #comboName {
     width: 20rem;
 }
 
-#addComboForm>*:nth-child(2) input:focus {
+.monokai_mode #addComboForm>*:nth-child(2) input:focus ,
+.dark_mode #addComboForm>*:nth-child(2) input:focus {
     outline: solid 1px rgba(255, 255, 255, 0.438);
+}
+#addComboForm>*:nth-child(2) input:focus {
+    outline:solid 1px rgba(0, 0, 0, 0.664);
+
 
 }
 
@@ -1350,10 +1398,19 @@
     grid-template-columns: 55% 45%;
 }
 
+/* 3232 */
+.monokai_mode .outer-response>*:nth-child(1) {
+    background-color: #47493e;
+
+}
+.dark_mode .outer-response>*:nth-child(1) {
+    background-color: #181818;
+
+}
 .outer-response>*:nth-child(1) {
     transform: translateY(-7rem);
+    background-color: #ffffff;
     min-height: 20rem;
-    background-color: #181818;
     outline: solid 1px #ffffff26;
 }
 
@@ -1361,8 +1418,15 @@
     display: none;
 }
 
-.action-products {
+/* 3232 */
+
+.monokai_mode .action-products ,
+.dark_mode .action-products {
     color: rgb(199 199 199);
+
+}
+.action-products {
+    color: rgb(0, 0, 0);
     display: grid;
     place-items: center;
     padding: 9rem 0 3rem;
@@ -1409,16 +1473,24 @@
     left: 1.3rem;
     transform: translate(-50%, -50%);
 }
+/* 3232 */
 
-#findProdInput {
-    background-color: #1e1f1c96;
-    border: none;
+.monokai_mode #findProdInput ,
+.dark_mode #findProdInput {
     outline: solid 1px rgba(192, 192, 192, 0.308);
+    color: rgb(199 199 199);
+
+    background-color: #1e1f1c96;
+}
+#findProdInput {
+    background-color: #1e1f1c00;
+    border: none;
+    outline:solid 1px rgb(109 109 109 / 93%);
     border-radius: .9rem;
     height: 2.5rem;
     width: 17rem;
     padding: 0 1.3rem 0 2.2rem;
-    color: rgb(199 199 199);
+    color: rgb(0, 0, 0);
 }
  
 .data-products-selected,
@@ -1436,20 +1508,39 @@
     min-height: 10rem;
     text-align: center;
 }
+/* 3232 */
 
+.monokai_mode .loadingScComboForm {
+    background-color: #47493e;
+}
+.dark_mode .loadingScComboForm {
+    background-color: #181818;
+    
+}
 .loadingScComboForm {
     padding: 0;
     position: absolute;
+    background-color: #ffffff;
     z-index: 1;
-    background-color: #181818;
+}
+
+/* 3232 */
+
+.monokai_mode .data-products-selected ol,
+.monokai_mode .data-products ol ,
+.dark_mode .data-products-selected ol,
+.dark_mode .data-products ol {
+    background: #080808;
+    outline: solid 1px rgba(255, 255, 255, 0.274);
+
 }
 .data-products-selected ol,
 .data-products ol {
-    background: linear-gradient(-260deg, #1E1F1C, #747474, #747474);
+    background: #5151513d;
     display: grid;
     padding: .5rem .8rem;
     border-radius: .5rem;
-    outline: solid 1px rgba(255, 255, 255, 0.274);
+    outline: solid 1px rgb(55 55 55 / 64%);
     grid-template-columns: 2rem 11rem auto;
     gap: .6rem;
 }
@@ -1460,7 +1551,8 @@
 }
 
 .data-products>*:nth-child(1) {
-    display: block !important;
+    position: absolute;
+    display: flex !important;
 }
 
 .newLoadingScComboForm {
@@ -1471,12 +1563,18 @@
     display: grid !important;
 
 }
+/* 3232 */
 
+.monokai_mode .loadingScComboForm ol ,
+.dark_mode .loadingScComboForm ol {
+    background: #080808;
+    
+}
 .loadingScComboForm ol {
     display: flex;
     justify-content: center;
+    background: #5151513d;
     align-items: center;
-    background: #747474;
     width: 17.2rem;
 }
 
@@ -1498,7 +1596,7 @@
 .data-products-selected ol:hover,
 .data-products ol:hover {
     transition: .3s;
-    background: linear-gradient(-260deg, #1e1f1c9a, #7474748a, #7474748a);
+    background: #3d3d3d1f;
 
 }
 
@@ -1564,23 +1662,39 @@
 
 
 
+/* 3232 */
 
+.monokai_mode .combo-main-action {
+    background-color: #47493e;
+}
+.dark_mode .combo-main-action {
+    background-color: #181818;
+
+}
 .combo-main-action {
     height: 5rem;
-    background-color: #181818;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
 }
 
+
+/* 3232 */
+
+.monokai_mode .combo-main-action button ,
+.dark_mode .combo-main-action button {
+    color: rgb(199 199 199);
+
+}
 .combo-main-action button {
     width: 7.6rem;
     border-radius: .4rem;
     border: none;
     outline: solid 1px rgb(107, 107, 107);
     padding: .8rem 0;
-    color: rgb(199 199 199);
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1614,8 +1728,18 @@
     transition: .3s;
 }
 
-.outer-response .combo-response {
+/* 3232 */
+
+
+.monokai_mode .outer-response .combo-response {
+    background-color: #242520;
+}
+.dark_mode .outer-response .combo-response {
     background-color: rgb(43, 43, 43);
+
+}
+.outer-response .combo-response {
+    background-color: rgb(219 219 219);
     height: fit-content;
     padding: 1rem 2rem;
     border-radius: 0 0 .4rem;
