--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -399,6 +399,7 @@ text-align: start;
 #gcashName,
 #gcashNum,
 #pmethod{
+    outline: solid 1px rgb(111 111 111 / 40%);
     width: 18.2rem;
     height: 3rem;
     text-align: center;
@@ -414,7 +415,6 @@ text-align: start;
     font-size: 1.2rem;
 
 }
-
 
 
 
