--- a/resources/products.css
+++ b/resources/products.css
@@ -28,6 +28,7 @@
 
 }
 
+#findComboExec,
 #findExec {
     height: 2.5rem;
     width: 18rem;
@@ -37,6 +38,7 @@
     padding: 0 1rem 0 2rem;
 }
 
+.monokai_mode #findComboExec,
 .monokai_mode #findExec {
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
@@ -44,12 +46,23 @@
 
 }
 
+.dark_mode #findComboExec ,
 .dark_mode #findExec {
     background-color: #181818;
     color: rgb(199, 199, 199);
     outline: solid 1px rgb(128 127 127 / 26%);
 }
-
+.changeComboSec{
+    animation-name: comboSecShow;
+    animation-duration: .7s;
+    animation-iteration-count: 1;
+}
+@keyframes comboSecShow {
+    50%{
+        opacity: 0;
+        transform: translateX(-4rem);
+    }
+}
 .find_prod>*:nth-child(2) {
     position: relative;
 
@@ -71,13 +84,44 @@
 
 #content_products-cont {
     width: 110%;
+    margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    position: relative;
 
 }
 
+.showType {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: -2.5rem;
+    gap: .2rem;
+
+}
+
+.showType button {
+    border: solid 1px #ffbb00;
+    background: #a27c12;
+    padding: .5rem 1.8rem;
+    font-size: .9rem;
+    border-bottom: none;
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+    opacity: 50%;
+
+}
+ 
+.state {
+    opacity: 1 !important;
+}
+.showType button:hover{
+    opacity: 1;
+    transition: .3s;
+}
 .loading_sc {
     z-index: 2;
     padding: 0 .5rem;
@@ -155,6 +199,7 @@
 }
 
 .myprod_container ol {
+    position: relative;
     margin: 0 1rem;
     z-index: 3 !important;
     font-weight: 800;
@@ -276,7 +321,7 @@
 #content_products li {
     font-size: .8rem;
     background-color: white;
-    padding: .7rem .9rem;
+    padding: .4rem .9rem;
     border-radius: .6rem;
     border: solid 1px rgb(111 111 111 / 62%);
     position: relative;
@@ -1323,6 +1368,13 @@
     border-radius: 8rem .4rem .4rem 8rem;
 }
 
+#addComboForm>*:nth-child(2) i {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translate(-50%, -50%);
+}
+
 #addComboForm>*:nth-child(2) {
     display: flex;
     align-items: start;
@@ -1330,17 +1382,19 @@
     justify-content: center;
     gap: 2.7rem;
 }
-.data_summary_combo{
+
+.data_summary_combo {
     display: flex;
     justify-content: start;
     gap: 1rem;
 }
+
 #addComboForm>*:nth-child(2) ol:nth-child(2) li,
-#addComboForm>*:nth-child(2) ol:nth-child(1) {
+#addComboForm>*:nth-child(2) ol:nth-child(1) li {
     position: relative;
 }
 
-#addComboForm>*:nth-child(2) ol:nth-child(2) >*:nth-child(1) p,
+#addComboForm>*:nth-child(2) ol:nth-child(2)>*:nth-child(1) p,
 #addComboForm>*:nth-child(2) ol:nth-child(1) p {
     position: absolute;
     bottom: -1.5rem;
@@ -1348,14 +1402,14 @@
 
 }
 
-#addComboForm>*:nth-child(2) ol:nth-child(2) > *:nth-child(2) li:nth-child(1) h3,
-#addComboForm>*:nth-child(2) ol:nth-child(2) > *:nth-child(2) li:nth-child(2) h3 {
+#addComboForm>*:nth-child(2) ol:nth-child(2)>*:nth-child(2) li:nth-child(1) h3,
+#addComboForm>*:nth-child(2) ol:nth-child(2)>*:nth-child(2) li:nth-child(2) h3 {
     font-size: 1.8rem;
     text-align: center;
 }
 
-#addComboForm>*:nth-child(2) ol:nth-child(2) >*:nth-child(2) li:nth-child(1),
-#addComboForm>*:nth-child(2) ol:nth-child(2) >*:nth-child(2)li:nth-child(2) {
+#addComboForm>*:nth-child(2) ol:nth-child(2)>*:nth-child(2) li:nth-child(1),
+#addComboForm>*:nth-child(2) ol:nth-child(2)>*:nth-child(2)li:nth-child(2) {
     display: grid;
     place-items: center;
     gap: .3rem;
@@ -1376,13 +1430,17 @@
     color: #000000;
     border-radius: .4rem;
     height: 2.5rem;
-    padding: 0 .8rem;
+    padding: 0 .8rem 0 1.8rem;
     font-size: 1rem;
     outline: solid 1px rgb(0 0 0 / 30%);
 }
 
+#comboCode {
+    width: 11rem;
+}
+
 #comboName {
-    width: 20rem;
+    width: 16rem;
 }
 
 .monokai_mode #addComboForm>*:nth-child(2) input:focus,
@@ -1400,6 +1458,7 @@
     list-style-type: none;
 }
 
+#addComboForm>*:nth-child(2) ol,
 #addComboForm>*:nth-child(2) ol:nth-child(2) {
     display: flex;
     align-items: end;
@@ -1787,6 +1846,18 @@
     color: rgb(247, 37, 37);
 }
 
+.combo-response p {
+    animation-name: errorAddingCombo;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes errorAddingCombo {
+    0% {
+        transform: translateX(2rem);
+    }
+}
+
 .ol_anim_sel {
     animation-name: olanima_sel;
     animation-iteration-count: 1;
@@ -1797,7 +1868,7 @@
 @keyframes olanima_sel {
     50% {
         opacity: 0;
-        transform: scale(0) ;
+        transform: scale(0);
         background: #0ee220a6;
 
     }
@@ -1820,12 +1891,29 @@
 }
 
 
-.unsd ol:nth-child(1){
+.unsd ol:nth-child(1) {
     position: unset !important;
     display: grid !important;
 }
 
+.waiting {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: .5rem;
+}
 
+.waiting p {
+    height: .4rem;
+    width: .4rem;
+    background-color: #14b6db;
+    border-radius: 50%;
+}
+
+#tg {
+    position: absolute;
+    visibility: hidden;
+}
 
 
 
