--- a/resources/history.css
+++ b/resources/history.css
@@ -1,47 +1,46 @@
-.history_cont{
-    background-color: rgb(221, 221, 221);
-    padding: 6rem 0 0 4rem;
-
+.history_cont {
+    padding: 8rem 0 0 4rem;
 }
-.monokai_mode .history_cont{
+
+.monokai_mode .middle_side {
     background-color: #47493e;
     color: rgb(199, 199, 199);
 }
-.dark_mode .history_cont{
+
+.dark_mode .middle_side {
     background-color: #1F1F1F;
-    background-image: radial-gradient(rgb(255, 255, 255) 0.5px,#1F1F1F 0.5px);
+    background-image: radial-gradient(rgb(255, 255, 255) 0.5px, #1F1F1F 0.5px);
     background-size: 35px 35px;
     color: rgb(199, 199, 199);
 }
-.time_section{
+
+.middle_side .time_section {
     display: flex;
     flex-direction: column;
     row-gap: 1.3rem;
 }
-.history_cont h4{
+
+.history_cont h4 {
     padding-left: 1rem;
 }
-.history_pane{
-    background-color: rgb(221, 221, 221);
+
+.history_pane {
     position: relative;
 
 }
-.monokai_mode .history_pane{
-    background-color: #47493e;
-}
-.dark_mode .history_pane{
-    background-color: #1F1F1F;
-}
 
-.history_cont h2{
+
+
+.history_cont h2 {
     position: absolute;
     top: 12%;
     left: 54%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.history_info{
-    
-    height: 80%;
+
+.history_info {
+    overflow: hidden;
+    height: 70%;
     background-color: white;
     position: absolute;
     border-left: solid 1px rgb(189, 189, 189);
@@ -50,84 +49,86 @@
     min-width: 14rem;
     left: 50%;
     top: 54%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     border-radius: 1rem 0 0 1rem;
 
 }
-.monokai_mode .history_info{
+
+.monokai_mode .history_info {
     background-color: #1E1F1C;
     color: rgb(199, 199, 199);
     border: solid 1px rgb(128 127 127 / 26%);
 }
-.dark_mode .history_info{
+
+.dark_mode .history_info {
     background-color: #181818;
     color: rgb(199, 199, 199);
     border: solid 1px rgba(128, 127, 127, 0.39);
 }
 
 
-.history_cont ol{
+.history_cont ol {
     display: flex;
     justify-content: space-between;
     width: 80%;
     background-color: white;
     border-radius: .4rem;
     border: solid 1px rgb(189, 189, 189);
-    padding: .5rem .8rem;
+    padding: 1.5rem 1.5rem;
 }
 
-.monokai_mode .history_cont ol{
+.monokai_mode .history_cont ol {
     background-color: #1E1F1C;
     border: solid 1px rgb(128 127 127 / 26%);
 }
-.dark_mode .history_cont ol{
+
+.dark_mode .history_cont ol {
     background-color: #181818;
     border: solid 1px rgb(128 127 127 / 26%);
 }
 
-.history_cont li:nth-child(2){
+.history_cont li:nth-child(2) {
     text-align: center;
 }
-.history_cont li{
+
+.history_cont li {
     list-style: none;
     display: grid;
     row-gap: 5px;
 }
-.history_cont h5{
+
+.history_cont h5 {
     font-size: .7rem;
 }
-.history_cont p{
+
+.history_cont p {
     font-size: 14px;
 }
-.today_cont,.yesterday_cont,.last_week_cont{
+
+.data {
+    overflow-y: scroll;
+    scrollbar-width: none;
     margin-top: .5rem;
-    height: fit-content;
+    height: 70vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     row-gap: .3rem;
+    padding-bottom: 4rem;
 }
-.today_cont > *:hover{
+
+.data>*:hover {
     background-color: rgba(255, 104, 3, 0.329) !important;
     border-color: rgba(255, 104, 3, 0.87) !important;
-}
-.yesterday_cont > *:hover{
-    background-color: rgba(255, 104, 3, 0.329) !important;
-    border-color: rgba(255, 104, 3, 0.87) !important;
-    
-}
-.last_week_cont > *:hover{
-    background-color: rgba(255, 104, 3, 0.329) !important;
-    border-color: rgba(255, 104, 3, 0.87) !important;
-    
 }
 
 
-.history_info ol{
+.history_info ol {
     list-style: none;
 }
-.history_info ol:nth-child(1){
+
+.history_info ol:nth-child(1) {
     height: 7rem;
     display: flex;
     justify-content: center;
@@ -135,33 +136,38 @@
     place-items: center;
 
 }
-.history_info ol:nth-child(1) p{
+
+.history_info ol:nth-child(1) p {
     font-size: 1.2rem;
 
 }
-.history_info ol:nth-child(1) h4{
+
+.history_info ol:nth-child(1) h4 {
     font-size: .88rem;
 }
- 
-.history_ordered p:nth-child(2){
+
+.history_ordered p:nth-child(2) {
     text-align: start;
 
 }
-.history_ordered p:nth-child(3){
+
+.history_ordered p:nth-child(3) {
     justify-content: end;
 
 
 }
-.history_ordered p:nth-child(1){
+
+.history_ordered p:nth-child(1) {
 
     justify-content: center;
 
 }
 
-.history_ordered p{
+.history_ordered p {
     display: flex;
     align-items: center;
 }
+
 .history_info ol:nth-child(2) {
     height: 14rem;
     display: flex;
@@ -170,13 +176,14 @@
     flex-direction: column;
     justify-content: start;
     overflow-y: scroll;
-    scrollbar-width: thin;
+    scrollbar-width: none;
     height: fit-content;
     max-height: 50%;
     padding: 1rem 0;
     row-gap: .3rem;
 }
-.history_info ol:nth-child(2) li{
+
+.history_info ol:nth-child(2) li {
     display: grid;
     grid-template-columns: 15% 50% 25%;
     column-gap: .6rem;
@@ -185,27 +192,34 @@
 }
 
 
-.history_info ol:nth-child(2) li:hover{
+.history_info ol:nth-child(2) li:hover {
     outline: solid 1px rgba(255, 104, 3, 0.87);
     border-radius: .3rem;
     background-color: rgba(255, 104, 3, 0.329);
 }
-.history_info ol:nth-child(3){
+
+.history_info ol:nth-child(3) {
     margin-top: 1rem;
 }
-.history_info ol:nth-child(3) li{
+
+.history_info ol:nth-child(3) li {
     display: flex;
     justify-content: space-between;
     font-size: .8rem;
     margin: 0 1rem;
 }
-.askReceipt{
+
+.askReceipt {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
     margin-top: 2rem;
 
 }
-#print_receipt{
+
+#print_receipt {
     height: 2rem;
     border-radius: .3rem;
     border: none;
@@ -216,8 +230,218 @@
     font-weight: 60;
     width: 8rem;
 }
-#print_receipt:hover{
+
+#print_receipt:hover {
     box-shadow: inset 8rem 0 0 #a27c129c;
     transition: .3s;
     background-color: #a27c129c;
+}
+
+#dpLogo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 3rem;
+    animation-name: dpLogo;
+    animation-iteration-count: 1;
+    animation-duration: .8s;
+}
+
+@keyframes dpLogo {
+    0% {
+        top: 60%;
+        opacity: 0;
+        transform:  translate(-50%, -50%) ;
+    }
+}
+
+#delReceipt {
+    height: 2rem;
+    border-radius: .3rem;
+    border: none;
+    outline: solid 1px #ff0000;
+    background-color: #d43a3a4d;
+    cursor: pointer;
+    font-size: .9rem;
+    font-weight: 60;
+    width: 8rem;
+    color: white;
+    position: relative;
+    overflow: hidden;
+}
+
+#delReceipt d {
+    top: 50%;
+}
+
+#delReceipt i {
+    transform: translate(-50%, -50%) rotate(45deg);
+    top: -60%;
+}
+
+#delReceipt>* {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#delReceipt:hover {
+    background-color: #d43a3aa2;
+    transition: .4s;
+}
+
+#delReceipt:hover i {
+    transform: translate(-50%, -50%) rotate(0);
+    transition: .4s;
+    top: 50%;
+}
+
+#delReceipt:hover d {
+    transition: .4s;
+    top: 150%;
+}
+
+.findHistory {
+    display: grid;
+    place-items: center;
+    gap: 1rem;
+}
+
+.findHistory li {
+    position: relative;
+}
+
+.findHistory i {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    transform: translate(-50%, -50%);
+}
+
+.monokai_mode .findHistory li input {
+    outline: solid rgba(255, 255, 255, 0.568) 1px;
+    background-color: #47493e;
+    color: white;
+}
+
+.dark_mode .findHistory li input {
+    outline: solid rgba(255, 255, 255, 0.568) 1px;
+    color: white;
+}
+
+.dark_mode .findHistory li input:focus,
+.monokai_mode .findHistory li input:focus {
+    outline: solid rgba(255, 255, 255, 0.76) 1px;
+}
+
+.findHistory li input {
+    outline: solid rgba(20, 20, 20, 0.568) 1px;
+    background-color: #181818;
+    padding-left: 1.8rem;
+    width: 22rem;
+    height: 2rem;
+    border-radius: .4rem;
+    border: none;
+    font-size: .9rem;
+}
+
+.findHistory li input:focus {
+    outline: solid rgba(20, 20, 20, 0.767) 1px;
+}
+
+.group_type {
+    display: flex;
+    justify-content: start;
+    gap: 1rem;
+
+}
+
+.group_type button {
+    padding: .5rem 1rem;
+    border-radius: 2rem;
+    border: none;
+    background: rgba(128, 128, 128, 0.733);
+    color: white;
+    cursor: pointer;
+}
+
+.historyOn {
+    cursor: default !important;
+    outline: solid 1px rgba(255, 104, 3, 0.87);
+    background: rgba(255, 104, 3, 0.733) !important;
+    animation-name: historyOn;
+    animation-iteration-count: 1;
+    animation-duration: .4s;
+}
+
+@keyframes historyOn {
+    0% {
+        transform: scale(.75) translateY(2rem);
+    }
+}
+
+.group_type button:hover {
+    transition: .3s;
+    background-color: rgba(255, 104, 3, 0.733);
+}
+
+
+
+.data_history_cont #page-dir-cont {
+    background: none !important;
+    border: none !important;
+    cursor: default !important;
+    margin-top: 2rem;
+
+}
+
+
+.data_history_cont .main-dir-link {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 100% !important;
+}
+
+.dark_mode .data_history_cont .main-dir-link button,
+.monokai_mode .data_history_cont .main-dir-link button {
+    background: #181818;
+    outline: solid 1px rgba(255, 255, 255, 0.308);
+    color: white;
+}
+
+.data_history_cont .main-dir-link button {
+    height: 2rem;
+    width: 3.5rem;
+    display: grid;
+    place-items: center;
+    border-radius: 1rem;
+    font-size: 1rem;
+    border: none;
+    outline: solid 1px rgba(0, 0, 0, 0.308);
+}
+
+.data_history_cont .main-dir-link .data-link:hover {
+    background: rgb(212, 88, 5) !important;
+    transition: .2s;
+    cursor: pointer;
+
+}
+
+
+.monokai_mode .data_history_cont .main-dir-link #more,
+.dark_mode .data_history_cont .main-dir-link #more {
+    background: #3a3939 !important;
+}
+
+.data_history_cont #page-dir-cont .main-dir-link #more {
+    background: #c1c1c1 !important;
+    color: white;
+}
+
+.data_history_cont #pageON {
+    background: rgb(212, 88, 5) !important;
 }
