--- a/resources/history.css
+++ b/resources/history.css
@@ -42,6 +42,7 @@
     overflow: hidden;
     height: fit-content;
     max-height: 70%;
+    min-height: 45%;
     padding: 0 0 2rem 0;
     background-color: white;
     position: absolute;
