--- a/resources/overview.css
+++ b/resources/overview.css
@@ -33,6 +33,22 @@
     bottom: -1rem;
     left: -.1rem;
 }
+.data_from_graphical li:nth-child(3)::after{
+    all: unset;
+}
+.data_from_graphical li:nth-child(3) .summary_cont,
+.data_from_graphical li:nth-child(3) a{
+    height: 100%;
+    width: 100%;
+}
+.data_from_graphical li:nth-child(3) p{
+    font-size: 1.2rem;
+}
+.data_from_graphical li:nth-child(3) a{
+    color: rgb(199,199,199);
+    display: grid;
+    place-items: center;
+}
 .monokai_mode .dashboard_body li::after{
     background-color: #1E1F1C !important;
     color: rgb(199,199,199);
@@ -40,6 +56,7 @@
 .dark_mode .dashboard_body li::after{
     background-color: #181818 !important;
     color: rgb(199,199,199);
+    border: solid 1px rgb(160 160 160 / 34%);
 }
 
 .summary_show li::after {
@@ -79,12 +96,19 @@
     margin-top: 1rem;
 }
 
+.dashboard_body li {
+    width: 100%;
+
+}
+.summary_show li {
+    width: 30%;
+
+}
 .summary_show li,
 .dashboard_body li {
     border:  solid 1px rgb(160 160 160 / 35%) ;
     list-style: none;
     height: 7rem;
-    width: 15rem;
     border-radius: .7rem;
     display: flex;
     flex-direction: column;
@@ -162,7 +186,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
+    height: 300px;
 }
 
 .dashboard_body #myBarChart {
@@ -185,6 +210,7 @@
 }
 
 .data_from_graphical {
+    width: 30%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
