--- a/resources/style.css
+++ b/resources/style.css
@@ -588,25 +588,40 @@ img {
 
 }
 
+
 .dark_mode .products_content ol {
     background-color: #181818;
     color: rgb(199, 199, 199);
     border: solid 1px rgb(189 189 189 / 26%);
-
+    position: relative;
+    overflow: hidden;
 }
-.dark_mode .products_content .adding{
+
+.ntv {
+    position: absolute;
+    top: 0;
+    border-radius: 0 0 4rem 0;
+    left: 0;
+    font-size: .8rem;
+    padding: .5rem;
+    background: #c3000070;
+}
+
+.dark_mode .products_content .adding {
     animation-name: addingToCart;
     animation-iteration-count: 1;
     animation-duration: .3s;
 }
+
 @keyframes addingToCart {
-    0%{
+    0% {
         border: solid 1px rgba(255, 104, 3, 0.856);
         background-color: rgba(255, 104, 3, 0.212);
         transform: scale(.8);
         border-radius: 1rem;
     }
 }
+
 .products_content ol:hover {
     border: solid 1px rgba(255, 104, 3, 0.856);
     background-color: rgba(255, 104, 3, 0.329);
@@ -961,7 +976,7 @@ img {
 
 @keyframes on_notif {
     50% {
-        transform: scale(1.13) ;
+        transform: scale(1.13);
     }
 }
 
@@ -984,20 +999,22 @@ img {
 .notification i {
     background-color: rgb(0, 199, 0);
     height: 1.5rem;
-    width:  1.5rem;
+    width: 1.5rem;
     display: grid;
     place-items: center;
     border-radius: 50%;
     color: white;
 }
-.newNotif i{
+
+.newNotif i {
     transform: rotate(45deg);
     background-color: rgb(199, 30, 0) !important;
 }
 
-.newNotif::after{
+.newNotif::after {
     background-color: rgb(199, 30, 0) !important;
 }
+
 .notification::after {
     left: 0;
     position: absolute;
@@ -1056,33 +1073,39 @@ img {
     color: rgb(206, 206, 206);
 
 }
-.receipt{
+
+.receipt {
     margin-top: 1rem;
     position: absolute;
     width: 20rem;
     font-size: .9rem;
 }
-.receipt_logo_cover{
+
+.receipt_logo_cover {
     padding: .2rem 1rem;
     border-radius: 50%;
     width: fit-content;
     background-color: rgb(161, 161, 161);
 }
-.desc{
+
+.desc {
     text-align: center;
     padding: 0 2.2rem;
     display: grid;
     place-items: center;
 }
-.receipt section{
+
+.receipt section {
     margin: 1rem 0 1.3rem;
     padding: 0 1.3rem;
 }
-.receipt section ol:nth-child(3){
+
+.receipt section ol:nth-child(3) {
     grid-template-columns: 30% auto;
 
 }
-.receipt section ol{
+
+.receipt section ol {
     font-size: .75rem;
     display: grid;
     grid-template-columns: 30% 30% 30%;
@@ -1092,84 +1115,96 @@ img {
     justify-content: center;
     gap: .3rem;
 }
-.receipt .details section ol li{
+
+.receipt .details section ol li {
     width: 100%;
 }
-.orders-receipt{
+
+.orders-receipt {
     padding: 0 1.3rem;
 }
-.receipt section ol li:nth-child(1){
+
+.receipt section ol li:nth-child(1) {
     font-weight: 800;
 
 }
-.receipt section ol li:nth-child(2){
+
+.receipt section ol li:nth-child(2) {
     text-align: start;
 }
-.receipt section ol li:nth-child(3){
+
+.receipt section ol li:nth-child(3) {
     text-align: end;
 }
-#receipt_logo{
+
+#receipt_logo {
     margin-top: 1rem;
     margin-bottom: .5rem;
     height: 3rem;
     filter: grayscale(100%);
 }
 
-.receipt .orders-receipt h3{
+.receipt .orders-receipt h3 {
     width: 100%;
     text-align: center;
     margin-bottom: .5rem;
 }
-.receipt .orders-receipt table tr{
+
+.receipt .orders-receipt table tr {
     height: 2rem;
 
 }
-.receipt .orders-receipt table thead{
+
+.receipt .orders-receipt table thead {
     border-top: solid 1px rgba(0, 0, 0, 0.452);
     border-bottom: solid 1px rgba(0, 0, 0, 0.452);
 }
 
 .receipt .orders-receipt table td:nth-child(1),
-.receipt .orders-receipt table thead th:nth-child(1){
+.receipt .orders-receipt table thead th:nth-child(1) {
     width: 3.5rem;
     text-align: center;
 
 }
+
 .receipt .orders-receipt table td:nth-child(2),
-.receipt .orders-receipt table thead th:nth-child(2){
+.receipt .orders-receipt table thead th:nth-child(2) {
     width: 15rem;
     text-align: start;
-    padding:0  1rem 0 .5rem;
+    padding: 0 1rem 0 .5rem;
 }
 
 .receipt .orders-receipt table td:nth-child(3),
-.receipt .orders-receipt table thead th:nth-child(3){
+.receipt .orders-receipt table thead th:nth-child(3) {
     width: 4rem;
     text-align: end;
     padding-right: .5rem;
 
 }
 
-.receipt-summary{
+.receipt-summary {
     padding: .3rem 1.3rem;
 
 }
-.receipt-summary ol:nth-child(5){
+
+.receipt-summary ol:nth-child(5) {
     font-size: 1.1rem !important;
     font-weight: 800;
 }
-.receipt-summary ol:nth-child(3){
+
+.receipt-summary ol:nth-child(3) {
     margin-bottom: .3rem;
 }
-.receipt-summary ol{
+
+.receipt-summary ol {
     font-size: .98rem;
-    list-style: none;   
+    list-style: none;
     padding: .1rem .5rem;
-    display: flex; 
+    display: flex;
     justify-content: space-between;
 }
 
-.th{
+.th {
     margin: 2rem 0;
     text-align: center;
 }
